--- a/society/category.html
+++ b/society/category.html
@@ -258,18 +258,19 @@
                         <div class="row">
                             <div class="col-12 col-md-5">
                                 <div class="editorial-post-thumb">
-                                    <img src="img/blog-img/bitcoin.jpg" alt="">
+                                    <img src="img/JapanProtest.png" alt="抗议东京奥运会的日本民众">
                                 </div>
                             </div>
                             <div class="col-12 col-md-7">
                                 <div class="editorial-post-content">
                                     <!-- Post Tag -->
                                     <div class="gazette-post-tag">
-                                        <a href="#">Editorial</a>
+                                        <a>Editorial</a>
                                     </div>
-                                    <h2><a href="#" class="font-pt mb-15">Move over, bitcoin. <br>Here comes litecoin</a></h2>
-                                    <p class="editorial-post-date mb-15">March 29, 2016</p>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices egestas nunc, quis venenatis orci tincidunt id. Fusce commodo blandit eleifend. Nullam viverra tincidunt dolor, at pulvinar dui. Nullam at risus ut ipsum viverra posuere. Aliquam quis convallis enim. Nunc pulvinar molestie sem id blandit. Nunc venenatis interdum mollis...</p>
+                                    <h2><a href="Tokyo_Olympics.html" class="font-pt mb-15">东京奥运<br>办还是不办</a></h2>
+                                    <p class="editorial-post-date mb-15">2021/2/23</p>
+                                    <p>基于以下原因，本社评论员目前仍倾向于认为东京奥运将会举办。</p>
+                                    <a href="Tokyo_Olympics.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
