Comment area UI (sample)

--- a/politics/the_eighteenth_brumaire_of_donald_trump_1.html
+++ b/politics/the_eighteenth_brumaire_of_donald_trump_1.html
@@ -346,6 +346,7 @@
                                     <!-- Comment Content -->
                                     <div class="comment-content">
                                         <h5>用户甲</h5>
+                                        <span class="comment-date font-pt text-muted">December 18, 2017</span>
                                         <p>来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论。</p>
                                         <a class="reply-btn" href="#">回复 <i class="fa fa-reply" aria-hidden="true"></i></a>
                                     </div>
