--- a/society/category.html
+++ b/society/category.html
@@ -582,15 +582,15 @@
 
 
 <!-- jQuery (Necessary for All JavaScript Plugins) -->
-<script src="js/jquery/jquery-2.2.4.min.js"></script>
+<script src="../js/jquery/jquery-2.2.4.min.js"></script>
 <!-- Popper js -->
-<script src="js/popper.min.js"></script>
+<script src="../js/popper.min.js"></script>
 <!-- Bootstrap js -->
-<script src="js/bootstrap.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
 <!-- Plugins js -->
-<script src="js/plugins.js"></script>
+<script src="../js/plugins.js"></script>
 <!-- Active js -->
-<script src="js/active.js"></script>
+<script src="../js/active.js"></script>
 
 </body>
 
