--- a/society/category.html
+++ b/society/category.html
@@ -12,14 +12,14 @@
     <title>麦迪讯【社会类】文章 | Madnews: Society</title>
 
     <!-- Favicon  -->
-    <link rel="icon" href="img/core-img/logo.jpg">
+    <link rel="icon" href="../img/core-img/logo.jpg">
 
     <!-- Core Style CSS -->
-    <link rel="stylesheet" href="css/core-style.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/core-style.css">
+    <link rel="stylesheet" href="../style.css">
 
     <!-- Responsive CSS -->
-    <link href="css/responsive.css" rel="stylesheet">
+    <link href="../css/responsive.css" rel="stylesheet">
 
 </head>
 
