--- a/society/category.html
+++ b/society/category.html
@@ -151,13 +151,13 @@
                 <!-- Logo Area -->
                 <div class="col-12 col-md-4">
                     <div class="logo-area">
-                        <a href="index.html"><img src="img/core-img/logo_madnews.png" alt="logo"></a>
+                        <a href="../index.html"><img src="../img/core-img/logo_madnews.png" alt="logo"></a>
                     </div>
                 </div>
                 <!-- Header Advert Area -->
                 <div class="col-12 col-md-8">
                     <div class="header-advert-area">
-                        <img src="img/bg-img/madnews_bg.jpg" alt="header-add">
+                        <img src="../img/bg-img/madnews_bg.jpg" alt="header-add">
                     </div>
                 </div>
             </div>
