--- a/society/Nomadland.html
+++ b/society/Nomadland.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>创造历史，肖亭携《有靠之天》获得小金人！！</title>
+    <title>创造历史，赵婷携《无依之地》获得小金人！！</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="../img/core-img/logo.jpg">
@@ -202,7 +202,7 @@
                                             <a class="nav-link" href="#">教育 Education</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">社会 Society</a>
+                                            <a class="nav-link" href="category.html">社会 Society</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="#">科技 Tech</a>
@@ -253,7 +253,7 @@
                                 <a href="#">Society</a>
                             </div>
                             <p style="font-size: 30px"><b>麦迪讯评论版第三十五期</b></p>
-                            <h2 class="font-pt">创造历史，肖亭携《有靠之天》获得小金人！！</h2>
+                            <h2 class="font-pt">创造历史，赵婷携《无依之地》获得小金人！！</h2>
                             <p>April 25, 2021</p>
                             <p>麦迪讯 2021年4月25日</p>
                         </div>
@@ -274,17 +274,17 @@
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
                             <p><b><i>01</i></b></p>
-                            <p><b>创造历史，肖亭携《有靠之天》获得小金人！！</b></p>
+                            <p><b>Nomadland：无依之地</b></p>
                             <p>
-                                周日，肖亭首位获得奥斯卡最佳导演奖的有色人种女性，她也是首位获得该奖的华人女性，
-                                同时也是史上第二位摘得该奖项的女性导演。她执导的《有靠之天》斩获最佳电影奖，
+                                周日，赵婷首位获得奥斯卡最佳导演奖的有色人种女性，她也是首位获得该奖的华人女性，
+                                同时也是史上第二位摘得该奖项的女性导演。她执导的《无依之地》（<i>Nomadland</i>）斩获最佳电影奖，
                                 女主角弗朗西丝·麦克多曼德(Frances McDormand)获最佳女主角。
                                 这三项大奖为肖亭凭借《有靠之天》在颁奖季获得的一系列荣誉再添一笔。
-                                在领取最佳导演奖时，肖亭回忆起她儿时学到的一句话“人之初、性本善”。
+                                在领取最佳导演奖时，赵婷回忆起她儿时学到的一句话“人之初、性本善”。
                                 “<b>在我在世界各地到过的地方，遇到的人中，我总能发现他们身上的善，</b>”她说。
                                 “<b>所以这是给那些有信念，并且有勇气保持善的人的。无论多么艰难，都要在彼此身上坚持善。这个奖是给你们的，
                                     是你们激励我继续前行。</b>”
-                                在颁奖季早些时候，肖亭获已斩获金球奖、美国评论家选择奖和导演工会奖的最佳导演奖，
+                                在颁奖季早些时候，赵婷获已斩获金球奖、美国评论家选择奖和导演工会奖的最佳导演奖，
                                 并在其他组织的奖项评选中也有所斩获。
                             </p>
                         </div>
@@ -303,36 +303,36 @@
                         <div class="single-post-text">
                             <p><b><i>02</i></b></p>
                             <p><b>麦迪讯快评</b></p>
-                            <p>肖亭作为一个出生在中国的导演，初出茅庐，却以一部反映美国底层的电影，
+                            <p>赵婷作为一个出生在中国的导演，初出茅庐，却以一部反映美国底层的电影，
                                 获得了美国观众的认可，斩获了奥斯卡小金人。在文体领域获得这样的成就，
                                 堪比当年姚明在美国获选NBA全明星阵容。但凡是经历过当年“姚明热”的人，无不把姚明当成为国争光的英雄人物。
-                                但是，当肖亭获奖的消息传出，远在大洋彼岸的中国却没有爆发“肖亭热”，
+                                但是，当赵婷获奖的消息传出，远在大洋彼岸的中国却没有爆发“赵婷热”，
                                 非但没有媒体为她喝彩，反而连报道该新闻的媒体都寥寥无几。
                             </p>
                             <p>奇怪，这是为什么？</p>
-                            <p>让我们来看看肖亭的电影《有靠之天》，是一部地地道道的美国电影，
+                            <p>让我们来看看赵婷的电影《无依之地》，是一部地地道道的美国电影，
                                 讲述了一个美国流浪女性的艰辛岁月，真实地反映了美国底层劳动人民在“去工业化”浪潮中所受的种种苦难，
                                 具有充分的批判精神和人道关怀。这样的题材不仅没有半点不利于中国的地方，
                                 相反，如果有关部门允许它在国内公映，还可以向中国观众揭露美国资本主义社会的“真实状况”，
                                 “反衬”出伟大祖国才是真正的“有靠之天”。</p>
-                            <p>然而，这样的好事并没有发生，《有靠之天》莫名其妙地消失在国内观众的视野里，
-                                大家谈论起肖亭也大多仅仅知道他是白云大妈的继女。可是，肖亭并非仅仅是“明星之后”那么简单，
+                            <p>然而，这样的好事并没有发生，《无依之地》莫名其妙地消失在国内观众的视野里，
+                                大家谈论起肖亭也大多仅仅知道他是白云大妈的继女。可是，赵婷并非仅仅是“明星之后”那么简单，
                                 她在几乎不会英语的情况下出国留学，先在英国学习政治学，后赴纽约大学电影学院学习。
                                 来自中国的她很好地战胜了“异乡人”的孤独和美国社会针对亚裔和女性的歧视，成为了中国留学生中的佼佼者。</p>
                             <p>
-                                作为影坛新人，肖亭具有超常的天赋和坚韧不拔的奋斗精神。在纽约酒吧打工时，
+                                作为影坛新人，赵婷具有超常的天赋和坚韧不拔的奋斗精神。在纽约酒吧打工时，
                                 她积极和各色人等打交道，积累了丰富的社会经验和创作素材。为了拍摄反映美国印第安人生活的电影《哥哥教我唱的歌》，
-                                肖亭深入南达科他州的印第安人保留地体验生活，只为找到最合适的原住民演员。拍摄期间，她又深受资金短缺之苦。
-                                刚得到一点经费，家中又被盗，电脑、摄影设备、硬盘被洗劫一空。然而，困窘并没有使肖亭屈服，她咬紧牙关，
+                                赵婷深入南达科他州的印第安人保留地体验生活，只为找到最合适的原住民演员。拍摄期间，她又深受资金短缺之苦。
+                                刚得到一点经费，家中又被盗，电脑、摄影设备、硬盘被洗劫一空。然而，困窘并没有使赵婷屈服，她咬紧牙关，
                                 用10万美元完成了100万美元预算的电影长篇处女作，并获得了广泛的好评。
                             </p>
                             <p>
-                                前几部电影的成功不仅锻炼了肖亭的拍摄功力，也赋予她成为优秀导演的素质：
+                                前几部电影的成功不仅锻炼了赵婷的拍摄功力，也赋予她成为优秀导演的素质：
                                 对所处时代的非凡洞察力和真挚的的底层关怀。这些素质自然使肖亭获得了更多的投资和与顶级演员合作的机会。
-                                因此，肖亭能拍出《有靠之天》这样的扛鼎之作，是水到渠成的事情。
+                                因此，赵婷能拍出《无依之地》这样的扛鼎之作，是水到渠成的事情。
                             </p>
                             <p>
-                                肖亭无疑是一个具有叛逆色彩的青年艺术家，一方面，她敢想敢干，不愿意寄生于继母的光环下。
+                                赵婷无疑是一个具有叛逆色彩的青年艺术家，一方面，她敢想敢干，不愿意寄生于继母的光环下。
                                 另一方面，作为独立导演的她富有批判精神，用边缘人群的故事去对抗传统精英视角。
                                 <b>对于这样一个导演，我们难道能要求她以笑脸示人，发表的言论都是驯顺的“和风细雨”吗？
                                     她的作品，是需要抱着耐心，用严肃的审美眼光去欣赏的。</b>
@@ -358,9 +358,10 @@
                                 我国的精神文明建设又因为他们的“义举”而进步了吗？倒头来，只把一个个英雄豪杰“逼上梁山”，
                                 把友善开放的大门一点点关上。嗟乎！此等蠢行，有识之士能不悲哉？</p>
                             <p>虽然我们无法预测此事件的后续发展，但可以肯定的是，
-                                《有靠之天》无法在国内上映对中国电影的发展没有丝毫益处。
+                                《无依之地》无法在国内上映对中国电影的发展没有丝毫益处。
                                 中国电影人痛失了与一位有国际视野的华裔导演切磋交流的机会，
-                                中国观众痛失了被年轻一代的才华所惊艳的机会，只能被迫在一部部“爆款爽剧”组成的泥潭死水中虚度时光。</p>
+                                中国观众痛失了被年轻一代的才华所惊艳的机会，
+                                在大多数时候只能被迫在一部部“爆款爽剧”组成的泥潭死水中虚度时光。</p>
                         </div>
                     </div>
 
