--- a/society/category.html
+++ b/society/category.html
@@ -280,7 +280,7 @@
                         <div class="row">
                             <div class="col-12 col-md-5">
                                 <div class="editorial-post-thumb">
-                                    <img src="img/blog-img/bitcoin.jpg" alt="">
+                                    <img src="img/Nomadland_Nomadland.jpg" alt="Nomadland">
                                 </div>
                             </div>
                             <div class="col-12 col-md-7">
@@ -289,9 +289,9 @@
                                     <div class="gazette-post-tag">
                                         <a>麦迪讯专栏第35期</a>
                                     </div>
-                                    <h2><a href="Nomadland.html" class="font-pt mb-15">创造历史，<br>肖亭携《有靠之天》获得小金人</a></h2>
+                                    <h2><a href="Nomadland.html" class="font-pt mb-15">创造历史，<br>赵婷携《无依之地》获得小金人</a></h2>
                                     <p class="editorial-post-date mb-15">2021/4/25</p>
-                                    <p>当肖亭获奖的消息传出，远在大洋彼岸的中国却没有爆发“肖亭热”，
+                                    <p>当赵婷获奖的消息传出，远在大洋彼岸的中国却没有爆发“赵婷热”，
                                 非但没有媒体为她喝彩，反而连报道该新闻的媒体都寥寥无几。</p>
                                 </div>
                             </div>
