--- a/society/category.html
+++ b/society/category.html
@@ -265,7 +265,7 @@
                                 <div class="editorial-post-content">
                                     <!-- Post Tag -->
                                     <div class="gazette-post-tag">
-                                        <a>麦迪讯专栏第26期</a>
+                                        <a style="color:white">麦迪讯专栏第26期</a>
                                     </div>
                                     <h2><a href="Tokyo_Olympics.html" class="font-pt mb-15">东京奥运<br>办还是不办</a></h2>
                                     <p class="editorial-post-date mb-15">2021/2/23</p>
@@ -287,7 +287,7 @@
                                 <div class="editorial-post-content">
                                     <!-- Post Tag -->
                                     <div class="gazette-post-tag">
-                                        <a>麦迪讯专栏第35期</a>
+                                        <a style="color:white">麦迪讯专栏第35期</a>
                                     </div>
                                     <h2><a href="Nomadland.html" class="font-pt mb-15">创造历史，<br>赵婷携《无依之地》获得小金人</a></h2>
                                     <p class="editorial-post-date mb-15">2021/4/25</p>
@@ -310,7 +310,7 @@
                                 <div class="editorial-post-content">
                                     <!-- Post Tag -->
                                     <div class="gazette-post-tag">
-                                        <a href="#">Intro</a>
+                                        <a style="color:white">Intro</a>
                                     </div>
                                     <h2><a href="about-us.html" class="font-pt mb-15">麦迪讯社团介绍</a></h2>
                                     <p class="editorial-post-date mb-15">2019-2021</p>
@@ -335,7 +335,7 @@
                 <div class="gazette-welcome-post">
                     <!-- Post Tag -->
                     <div class="gazette-post-tag">
-                        <a>麦迪讯【社论】第41期</a>
+                        <a style="color:white">麦迪讯【社论】第41期</a>
                     </div>
                     <a href="41_Stars_Will_Shine_Above_The_Valley_Floor.html" class="font-pt" target="_blank" title="在新标签页打开专栏"><h2 class="font-pt">就算是“土猪”，也可以仰望星空</h2></a>
                     <p class="gazette-post-date">2021/05/31</p>
@@ -359,7 +359,7 @@
                 <div class="gazette-welcome-post">
                     <!-- Post Tag -->
                     <div class="gazette-post-tag">
-                        <a>麦迪讯【社论】第40期</a>
+                        <a style="color:white">麦迪讯【社论】第40期</a>
                     </div>
                     <a href="40_Lying_Flat.html" class="font-pt" target="_blank" title="在新标签页打开专栏"><h2 class="font-pt">年轻人选择“躺平”有罪否？</h2></a>
                     <p class="gazette-post-date">2021/05/31</p>
@@ -383,7 +383,7 @@
                 <div class="gazette-welcome-post">
                     <!-- Post Tag -->
                     <div class="gazette-post-tag">
-                        <a>麦迪讯【社论】第39期</a>
+                        <a style="color:white">麦迪讯【社论】第39期</a>
                     </div>
                     <a href="39_Gansu_Cross-Country_Marathon.html" class="font-pt" target="_blank" title="在新标签页打开专栏"><h2 class="font-pt">是天灾，更是人祸——甘肃越野马拉松的惨痛教训</h2></a>
                     <p class="gazette-post-date">2021/05/24</p>
@@ -407,7 +407,7 @@
                 <div class="gazette-welcome-post">
                     <!-- Post Tag -->
                     <div class="gazette-post-tag">
-                        <a>麦迪讯【社论】第38期</a>
+                        <a style="color:white">麦迪讯【社论】第38期</a>
                     </div>
                     <a href="38_About_Chengdu_NO 49_Middle_School.html" class="font-pt"
                                target="_blank" title="在新标签页打开专栏"><h2 class="font-pt">记一次有必要的失误——由成都四十九中事件所想到的</h2></a>
