--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                             </div>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="politics/the_eighteenth_brumaire_of_donald_trump_1.html">政治 Politics</a>
+                                            <a class='nav-link' href='politics/the_eighteenth_brumaire_of_donald_trump_1.php'>政治 Politics</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="business/single-post.html">财经 Business</a>
