Update of new banners

--- a/category.html
+++ b/category.html
@@ -157,7 +157,7 @@
                     <!-- Header Advert Area -->
                     <div class="col-12 col-md-8">
                         <div class="header-advert-area">
-                            <img src="img/bg-img/madnews_bg.jpg" alt="header-add">
+                            <img src="img/bg-img/madnews_bg.png" alt="header-add">
                         </div>
                     </div>
                 </div>
