--- a/contact.html
+++ b/contact.html
@@ -157,7 +157,7 @@
                     <!-- Header Advert Area -->
                     <div class="col-12 col-md-8">
                         <div class="header-advert-area">
-                            <img src="img/bg-img/madnews_bg.jpg" alt="header-add">
+                            <img src="img/bg-img/madnews_bg.png" alt="header-add">
                         </div>
                     </div>
                 </div>
@@ -231,7 +231,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="breacumb-content d-flex align-items-center justify-content-between">
-                        <h3 class="font-pt mb-0">Contact</h3>
+                        <h3 class="font-pt mb-0">平台介绍 Platforms</h3>
                         <p class="editorial-post-date text-dark mb-0">28 November 2017</p>
                     </div>
                 </div>
