--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <!-- Header Advert Area -->
                     <div class="col-12 col-md-8">
                         <div class="header-advert-area">
-                            <img src="img/bg-img/madnews_bg.jpg" alt="header-add">
+                            <img src="img/bg-img/madnews_bg.png" alt="header-add">
                         </div>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                                             </div>
                                         </li>
                                         <li class="nav-item">
-                                            <a class='nav-link' href='politics/the_eighteenth_brumaire_of_donald_trump_1.php'>政治 Politics</a>
+                                            <a class='nav-link' href='politics/the_eighteenth_brumaire_of_donald_trump_1.html'>政治 Politics</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="business/single-post.html">财经 Business</a>
