--- a/sport/Chinese_Women_Football.html
+++ b/sport/Chinese_Women_Football.html
@@ -157,7 +157,7 @@
                     <!-- Header Advert Area -->
                     <div class="col-12 col-md-8">
                         <div class="header-advert-area">
-                            <img src="../img/bg-img/madnews_bg.jpg" alt="header-add">
+                            <img src="../img/bg-img/madnews_bg.png" alt="header-add">
                         </div>
                     </div>
                 </div>
@@ -227,7 +227,7 @@
 
     <section class="single-post-area">
         <!-- Single Post Title -->
-        <div class="single-post-title bg-img background-overlay" style="background-image: url(../img/bg-img/sports_bg.jpg);">
+        <div class="single-post-title bg-img background-overlay" style="background-image: url(../img/bg-img/recreation_bg.png);">
             <div class="container h-100">
                 <div class="row h-100 align-items-end">
                     <div class="col-12">
