add SZW's photo

--- a/about-us.html
+++ b/about-us.html
@@ -401,6 +401,17 @@
                     </div>
                     <div class="col-12 col-sm-6 col-md-3">
                         <div class="single-team-area">
+                            <img src="img/members-img/szw.jpg" alt="">
+                            <div class="team-member-data">
+                                <h4 class="font-pt">宋知为</h4>
+                                <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <h5 class="font-pt mb-0">技术</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="single-team-area">
                             <img src="img/members-img/wxl.jpg" alt="">
                             <div class="team-member-data">
                                 <h4 class="font-pt">王旭黎</h4>
