--- a/recreation/FC_Neutral_Name.html
+++ b/recreation/FC_Neutral_Name.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>麦迪讯 | 唐纳德·特朗普的雾月一十八日（上）</title>
+    <title>麦迪讯 | “改中性名”风波暂告结束，中国足俱改革长路漫漫</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="../img/core-img/logo.jpg">
@@ -163,6 +163,8 @@
                 </div>
             </div>
         </div>
+
+
         <!-- Bottom Header Area -->
         <div class="bottom-header">
             <div class="container h-100">
@@ -198,7 +200,7 @@
                                             <a class="nav-link" href="../sport/Chinese_Women_Football.html">文体 Recreation</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../news/45_See_Through_Pigs_Digging_Cabbages.html">新闻评论 Commentary</a>
+                                            <a class="nav-link" href="../news/single-post.html">新闻评论 Commentary</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="../pandemic/pandemic.html">疫情 Pandemic</a>
@@ -227,18 +229,18 @@
 
     <section class="single-post-area">
         <!-- Single Post Title -->
-        <div class="single-post-title bg-img background-overlay" style="background-image: url(../img/bg-img/politics_bg.png);">
+        <div class="single-post-title bg-img background-overlay" style="background-image: url(../img/bg-img/recreation_bg.png);">
             <div class="container h-100">
                 <div class="row h-100 align-items-end">
                     <div class="col-12">
                         <div class="single-post-title-content">
                             <!-- Post Tag -->
                             <div class="gazette-post-tag">
-                                <a href="">Politics</a>
+                                <a href="#">Recreation</a>
                             </div>
-                            <h2 class="font-pt">唐纳德·特朗普的雾月一十八日（上）</h2>
-                            <p>January 20, 2021</p>
-                            <p>作者：赤色的黎明</p>
+                            <h2 class="font-pt">“改中性名”风波暂告结束，中国足俱改革长路漫漫</h2>
+                            <p>April 4, 2021</p>
+                            <p>作者：冬薯夏瓜</p>
                         </div>
                     </div>
                 </div>
@@ -251,74 +253,117 @@
 
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
-                            <p><b>写在前面</b></p>
-                            <p>自2020年11月起一系列围绕着美国总统大选的闹剧到1月6日发展到了高潮，在现任总统特朗普的鼓吹之下，其支持者展开了对美国国会的冲击。尽管这场“向罗马进军”的低劣复刻版闹剧（或者说“笑剧”）仍未完全落幕，但这荒唐可笑的一幕令笔者不自禁地想写下这一短文。有心的读者可能一来就发现了<b>本文致敬了马克思的《路易·波拿巴的雾月十八日》的标题</b>。这不仅仅是因为特朗普与路易·波拿巴一样，一个平庸可笑的小丑在一场荒唐的闹剧中成了“英雄” （后者成功了，而前者依然前途未卜），更是因为二者都表现出了资产阶级共和国内部发展中积累的重重矛盾和阶级斗争。马克思曾在《路易·波拿巴的雾月十八日》说到“在那里（美国），<b>虽然已有阶级存在，但它们还没有完全固定下来</b>，它们在不断的运动中不断更新自己的组成部分，并且彼此互换着自己的组成部分；在那里，现代的生产资料不仅不和经常人口过剩的现象相结合，反而弥补了头脑和人手方面的相对缺乏；最后，在那里，应该开辟新世界的物质生产所具有的狂热而充满青春活力的进展，没有给予人们时间或机会来结束旧的幽灵世界”，<b>但在21世纪的今天，美国的资本主义发展似乎已经走到了矛盾集中凸显的时刻。阶级固化已到了相当严重的程度。</b></p>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-8">
+                        <div class="single-post-text">
+                            <p><b><i>01</i></b></p>
+                            <p><b>新赛季，新队名</b></p>
+                            <p>
+                                3 月 29 日下午，2021 赛季中国各级职业联赛的参赛俱乐部终于尘埃落定。
+                                上赛季中超冠军江苏队（原江苏苏宁）的退出让沧州雄狮（原石家庄永昌）递补获得征战中国足球协会超级联赛（中超）的机会，
+                                此前身陷 “解散” 传闻的天津津门虎（原天津泰达）现身中超球队名单则让浙江队（原浙江能源绿城）继续留在中国足球协会甲级联赛（中甲）。</p>
+                            <p>自去年十二月中国足协推出 “俱乐部名称非企业化变更” 的通知以来，
+                                围绕俱乐部名称 “中性化” 的风波便层出不穷，其中尤以老牌球队的名称变更引人关注：
+                                河南建业把使用了 26 年的球队名称更改为 “河南嵩山龙门” ，引发球迷不满和抵制；北京中赫国安经过种种努力
+                                压哨保全了 “北京国安” 名称；上海绿地申花复原了 2014 年以前的老名字 “上海申花” 。</p>
+                            <p>
+                                此外，有6支球队退出了新赛季的中国职业联赛 ，除了上一期专栏讲到的江苏队，
+                                还有一支前中超球队 “北京人和” 。这支曾获 2013 赛季足协杯冠军和 2014 赛季超级杯冠军
+                                的球队曾多次变更赞助企业，在随这些变更辗转上海、陕西、贵州、北京后，给俱乐部历史画上了突然的句点。</p>
+
+                            <p style="color:grey"><i>中国足球协会官网、人民网、俱乐部官网等</i></p>
                         </div>
                     </div>
 
                     <div class="col-12">
                         <div class="single-post-thumb">
                             <center>
-                                <img src="img/1_1.jpg" alt="">
-                                <p>图源：NBC</p>
+                                <img src="img/CSL2021_Person-In-Charge_Meeting.png" alt="2021职业联赛俱乐部负责人会议" width="750">
+                                <p style="color:grey; line-height: 30px">2021赛季中超联赛赛制信息，可见16支参赛球队名称<br />（来源：中国足协官网）
+                                </p>
                             </center>
                         </div>
                     </div>
 
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
-                            <p><b>“向国会进军”</b></p>
-                            <p>自11月美国大选点票结束以来，特朗普在输掉这次选举后便开始一系列企图继续保留其权力的挣扎。一方面，他玩弄起他的“狗哨”（通过暗示的手段来表达对政治主流观点的反对），比如，他经常说少数族裔的移民会把白人为主的郊区搞乱。<b>积极地调动起他的忠诚者们散布着各种粗制滥造的选举阴谋与作弊“证据”</b>。另一边，他<b>用狂热支持者选票（胡萝卜）和总统权力的大棒诱使共和党议员们支持他对于选举阴谋论的支持。不少共和党议员们还天真地以为对阴谋论的支持是榨干特朗普与其狂热支持者价值的机会，兴高采烈地放出对特朗普选举阴谋论暧昧模糊的支持。</b></p>
-                            <p>终于，在2021年1月6日，在美国国会与副总统彭斯仪式性地清点选举人团票的当天，特朗普与他的支持者们开启了一场滑稽的大型化装晚会与亡灵召唤。Reichstag（德国国会大厦，1933年发生过纳粹主导的国会纵火案）与火刑架火光中的褐衫和的白袍纷纷登场，奴隶主与十字军的旗帜飘扬起来，各种早已朽烂的鬼影在这天都粉墨登场并在特朗普的号召之下聚集在美国的国会下。终于，在彭斯如实宣布民主党候选人拜登胜选时，这位特朗普“虔诚忠实“的仆人马上成为了特朗普狂热支持者的首要目标。在“吊死彭斯（Hang Mike Pence）”的口号下，“爱国者们”在国会警察半推半就的“帮助”下冲入了国会。虽然这次混乱无序的冲击现在看来形同一场马戏团演出，但这确实是美国政治上史无前例的一场对其资产阶级共和制度的挑战；在此之前，很少有人会认为这个世界资本主义的核心上演了一幕香蕉共和国（中美洲几个以香蕉种植业为支柱的小国，以频繁的军事政变闻名）式的政治动荡。<b>要了解这一幕发生的缘由，我们需要用外科手术刀划开表层病变的肌理，去寻找资本主义在美国矛盾累积的内核。</b></p>
+                            <p><b><i>02</i></b></p>
+                            <p><b>麦迪讯快评</b></p>
+                            <p>欧洲 “五大联赛” （西甲，英超，德甲，意甲，法甲）是不少中国球迷颇为熟悉的顶级足球联赛，
+                                而在中国新生代球迷中尤以英超最受欢迎。伦敦作为英国的首都和大城市，也拥有不少正在或曾经征战英超的球队。
+                                在伦敦的足球俱乐部地图上，可以明显看到各个俱乐部的球迷分布形成以社区为基础的犬牙交错格局。
+                                <b>这些社区球迷才是球队生存的基本盘，或维持球队存在的根基。</b>
+                            </p>
                         </div>
                     </div>
 
                     <div class="col-12">
                         <div class="single-post-thumb">
                             <center>
-                                <img src="img/1_2.jpg" alt="">
-                                <p>图源：Chicago Tribune</p>
+                                <img src="img/Twitter_Hotspot_London_Football_Clubs.png" alt="足球俱乐部推特热区图" width="750">
+                                <p style="color: grey; line-height: 30px">2013-14足球赛季期间Twitter上的伦敦足球俱乐部热度分布地区图，
+                                    <br />体现了伦敦不同区域最受欢迎的足球俱乐部不全相同，即使是非英超俱乐部也有可观的热度。<br />地图中每一个小方格在实际中边长 500米。（来源：The Guardian, 2014 年 10 月）
+                                </p>
                             </center>
                         </div>
                     </div>
 
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
-                            <p><b>序幕</b></p>
-                            <p>要回答特朗普如何在2021年掀起这样一场风暴，我们必须先看一下他2016年是如何获得其选民支持并胜利的。在这次的冲击国会事件中，绝大多数特朗普的狂热支持者相信“Wir sind das volk （我们就是人民）”并相信着他们在执行着一场由“爱国者们”发起的掀翻腐败政府的“革命”。<b>不少的幼稚者看到这场由许多美国底层民众参与的运动错误地以为这是一场属于美国人民的运动，甚至于更荒谬地认为这是一场无产阶级运动。</b>正如纳粹党的在德国的崛起也不乏有来自于大量受蛊惑的德国工人与无产阶级的支持一样，特朗普所煽动的这场破坏活动目的是为了维护他自己的权力与扩张其种族主义与新时代麦卡锡主义的影响。同时<b>美国的底层人民在冷战麦卡锡主义，去工业化，工会衰落，宗教保守主义与新自由主义资本主义经济的统治与荼毒下</b>，一方面累积了<b>对大资本家与大企业的大量不满</b>。而另一方面，<b>美国社会长期以来又把左翼思想与社会主义当作洪水猛兽</b>。同时，资本主义的全球剥削体系也使美国这样的资本主义核心国家中的无产阶级享受到了大企业主们在全球剥削剩余价值后的残羹剩饭，使得他们愈发丧失了斗争性。在这样的矛盾环境中，在工厂减少、工会衰落背景下的底层人民开始转向了教堂与保守主义，转向了种族主义乃至于法西斯主义的道路上。右翼煽动者们试图让人们把他们的困境归咎于外来者与外国人们。在这样的的催化下，<b>美国这位弗兰克斯坦（玛丽雪莱笔下的一个科学怪人，他创造了一个缝合怪物）终于制造出了这个有着传统主义脑袋、基督教保守主义躯干、法西斯主义双腿与种族主义臂膀的“怪人”，并最终选择了特朗普成为其大脑。</b></p>
+                            <p>在这些 “基本盘”
+                                中，<b>老中小三代全是某队球迷的报道并不鲜见</b>；比赛日的球场周围人山人海；球迷组织力量庞大，在俱乐部重大决策过程中
+                                都会发声，其成员也是以购买球票和周边产品来供给球队收入的生力军。
+                                与此同时，你却很难从球队名称或者主场名称中推知持有俱乐部多数股份的个人或企业。
+                                这样一来，<b>每支球队可以形成自己独立的形象和圈子，不容易被赞助方左右。</b>
+                                也许，这样的格局便是足协以 “俱乐部名称非企业化” 打头的一系列新改革所参照的部分模板。</p>
                         </div>
                     </div>
 
                     <div class="col-12">
                         <div class="single-post-thumb">
                             <center>
-                                <img src="img/1_3.jpg" alt="">
-                                <p>图源：KRNV</p>
+                                <img src="img/2020_Premier_League_Teams.png" alt="2020-21 赛季英超联赛球队" width="750">
+                                <p style="color:grey; line-height: 30px">2020
+                                    2020-21赛季英超参赛俱乐部全员图，<br />可见俱乐部名称或主场名称罕有提到特定的赞助商个人或企业<br />（来源：英超联赛官网）</p>
                             </center>
                         </div>
                     </div>
 
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
-                            <p><b>选举前奏</b></p>
-                            <p>2020年初出现的新冠病毒并没有像特朗普自大地宣称到“会像奇迹般消失(One day — it’s like a miracle — it will disappear)”，相反地，美国的政治稳定性随着新冠病毒的肆虐与民众生活水平的普遍下降倒是毫不令人意外地消失了。</p>
-                            <p>在这样的环境下，长期建立在种族间不平等的经济地位之上的种族主义问题因为2020年的5月明尼苏达警察对于乔治·弗洛伊德的谋杀突出表现了出来，其引发的一系列诉求种族平等与反对法西斯主义的游行示威也达到了自民权运动以来对最高峰。<b>对于美国人民对种族平等与社会正义的诉求中，美国的资产阶级政府的两只铁钳对其进行了联合绞杀。</b>一方面是民主党与自由派对黑人运动表示口头支持，<b>但却对核心问题，即黑人和白人在经济地位上的不平等顾左右而言他</b>，另一方面则是<b>特朗普用“法律与秩序(law and orders)”集结国家暴力机器和民间的“反革命十字军”尝试用真枪实弹的暴力来“拯救”他们心心念念的属于“财产，家庭，宗教，秩序”的旧社会</b>。连最表面与浅薄的对于种族平等的诉求与对警察暴力的反对“都同时被当作‘谋害社会的行为’加以惩罚，当作‘社会主义阴谋’加以指责”。</p>
-                            <p>在这样的动荡与混乱中，年末的美国总统大选迎来了两位候选人，一位是老气横秋的政治建制派代表人拜登，而另一位就是本文的主角特朗普。毫无疑问地，特朗普先生在选举前就意识到他对新冠疫情的完全放任与突出的种族矛盾令他的连任之路变得愈发飘渺，于是<b>他的视线便开始转向了那属于古罗马“独裁官”亡灵的束棒与月桂枝，在选举投票前便一刻不停地质疑着选举的合法性，</b>“如果我输了，那一定是民主党作弊了”。</p>
-                        </div>
-                    </div>
-
-                    <div class="col-12">
-                        <div class="single-post-thumb">
-                            <center>
-                                <img src="img/1_4.jpg" alt="">
-                            </center>
+                            <p>然而，必须看到，<b>英国足球俱乐部体系与文化并非一朝一夕形成，而是超过百年演进的结果，
+                                    并且也或多或少受到了去年以来疫情的冲击。揠苗助长，便有可能适得其反。</b>
+                                对于国内的大多数俱乐部来说，“专业体育队+企业赞助”
+                                才是维持俱乐部生存的核心要素。在这时突然推进“俱乐部名非企业化”，一次性把企业名称完全排除在球队名称之外，
+                                只给约四个月的时间着实仓促，而看似简单的汉字改动实则意味着赞助企业在俱乐部活动中的存在感下降，
+                                并可能预告了接下来进一步削弱赞助企业对俱乐部控制的政策。恰逢疫情冲击各行各业，赞助企业大多资金紧张，
+                                这样的改变对一些企业来说已属损失，动摇了他们继续支持足球的决心，也给了他们借机退出的口实。
+                                虽然目前新赛季未能进入职业联赛的球队只有6支，但这个数字未来是否增长还有待观察。</p>
+                            <p><b>
+                                    俱乐部名称非企业化政策的初衷是好的，长远看也有利于足球文化向更纯粹、
+                                    更有吸引力的方向发展，但在俱乐部球迷文化尚未构建完成、俱乐部资金来源仍主要靠赞助企业的当下，
+                                    方向正确的改革如果过于急促，都会在短期引发不必要的震荡。</b>
+                            </p>
+                            <p style="color:grey"><i>数据来源：The Ganassa Report, State of European Football In East
+                                    Asia 2020</i></p>
                         </div>
                     </div>
 
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
+                            <br />
+                            <br />
+                            <hr />
+                            <p><b style="font-size:30px">往期体育专栏 </b> 作者：冬薯夏瓜</p>
+                            <p><a href="Jiangsu_FC_Stopped.html" style="color:blue" target="_blank" title="在新标签页打开另一期体育专栏">
+                                    第一期：中超冠军季前停摆，金元足球弊端尽显</a></p>
+                            <p><a href="Chinese_Women_Football.html" style="color:blue" target="_blank" title="在新标签页打开另一期体育专栏">
+                                    第三期：触目惊心的数据：铿锵玫瑰值得关注，女足联赛更需发展</a></p>
                         </div>
                     </div>
+
 
                 </div>
             </div>
