--- a/recreation/Jiangsu_FC_Stopped.html
+++ b/recreation/Jiangsu_FC_Stopped.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>麦迪讯 | 唐纳德·特朗普的雾月一十八日（上）</title>
+    <title>中超冠军季前停摆，金元足球弊端尽显</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="../img/core-img/logo.jpg">
@@ -157,12 +157,14 @@
                     <!-- Header Advert Area -->
                     <div class="col-12 col-md-8">
                         <div class="header-advert-area">
-                            <img src="../img/bg-img/madnews_bg.png" alt="header-add">
+                            <a href="#"><img src="../img/bg-img/madnews_bg.png" alt="header-add"></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
+
         <!-- Bottom Header Area -->
         <div class="bottom-header">
             <div class="container h-100">
@@ -198,7 +200,7 @@
                                             <a class="nav-link" href="../sport/Chinese_Women_Football.html">文体 Recreation</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../news/45_See_Through_Pigs_Digging_Cabbages.html">新闻评论 Commentary</a>
+                                            <a class="nav-link" href="../news/single-post.html">新闻评论 Commentary</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="../pandemic/pandemic.html">疫情 Pandemic</a>
@@ -227,18 +229,19 @@
 
     <section class="single-post-area">
         <!-- Single Post Title -->
-        <div class="single-post-title bg-img background-overlay" style="background-image: url(../img/bg-img/politics_bg.png);">
+        <div class="single-post-title bg-img background-overlay" style="background-image: url(img/0.jpg);">
             <div class="container h-100">
                 <div class="row h-100 align-items-end">
                     <div class="col-12">
                         <div class="single-post-title-content">
                             <!-- Post Tag -->
                             <div class="gazette-post-tag">
-                                <a href="">Politics</a>
+                                <a href="#">Society</a>
                             </div>
-                            <h2 class="font-pt">唐纳德·特朗普的雾月一十八日（上）</h2>
-                            <p>January 20, 2021</p>
-                            <p>作者：赤色的黎明</p>
+                            <p style="font-size: 30px"><b>麦迪讯体育专栏第一期</b></p>
+                            <h2 class="font-pt">中超冠军季前停摆，金源足球弊端尽显</h2>
+                            <p>March 7, 2021</p>
+                            <p>冬薯夏瓜 2021年3月7日</p>
                         </div>
                     </div>
                 </div>
@@ -251,74 +254,119 @@
 
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
-                            <p><b>写在前面</b></p>
-                            <p>自2020年11月起一系列围绕着美国总统大选的闹剧到1月6日发展到了高潮，在现任总统特朗普的鼓吹之下，其支持者展开了对美国国会的冲击。尽管这场“向罗马进军”的低劣复刻版闹剧（或者说“笑剧”）仍未完全落幕，但这荒唐可笑的一幕令笔者不自禁地想写下这一短文。有心的读者可能一来就发现了<b>本文致敬了马克思的《路易·波拿巴的雾月十八日》的标题</b>。这不仅仅是因为特朗普与路易·波拿巴一样，一个平庸可笑的小丑在一场荒唐的闹剧中成了“英雄” （后者成功了，而前者依然前途未卜），更是因为二者都表现出了资产阶级共和国内部发展中积累的重重矛盾和阶级斗争。马克思曾在《路易·波拿巴的雾月十八日》说到“在那里（美国），<b>虽然已有阶级存在，但它们还没有完全固定下来</b>，它们在不断的运动中不断更新自己的组成部分，并且彼此互换着自己的组成部分；在那里，现代的生产资料不仅不和经常人口过剩的现象相结合，反而弥补了头脑和人手方面的相对缺乏；最后，在那里，应该开辟新世界的物质生产所具有的狂热而充满青春活力的进展，没有给予人们时间或机会来结束旧的幽灵世界”，<b>但在21世纪的今天，美国的资本主义发展似乎已经走到了矛盾集中凸显的时刻。阶级固化已到了相当严重的程度。</b></p>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-8">
+                        <div class="single-post-text">
+                            <p><b><i>01</i></b></p>
+                            <p><b>江苏足球的一声叹息</b></p>
+                            <p>
+                                1994年2月28日，江苏迈特足球俱乐部成立大会在南京成功举行，
+                                江苏省足球队正式改制为职业足球俱乐部。
+                                此后二十七年里，足球俱乐部经历了多次更名，
+                                最近的两次为：2015年12月从“江苏国信舜天”到“江苏苏宁”，2021年2月从“江苏苏宁”到“江苏”。
+                                2019年9月11日，俱乐部下属女足率先迎来高光时刻：
+                                球队提前2轮夺得2019赛季中国女超联赛冠军，加上此前获得的锦标赛和足协杯冠军，加冕为赛季三冠王。
+                                2020年11月12日，男足也加冕为新王：球队击败恒大，获得队史首座中超联赛冠军奖杯。
+                                彼时的江苏足球风光无限，然而仅仅一百零八天过后，2021年2月28日，
+                                一纸公告宣告江苏足球俱乐部所属各球队停止运营，
+                                球队能否参加新赛季的中超和亚冠联赛充满疑问，甚至球队自身的解散也已成为可能。
+                                颇具黑色幽默的是，这一天正是俱乐部职业化诞辰二十七周年。</p>
+
+                            <p style="color:grey"><i>消息来源：江苏足球俱乐部微信公众号、人民体育等</i></p>
                         </div>
                     </div>
 
                     <div class="col-12">
                         <div class="single-post-thumb">
                             <center>
-                                <img src="img/1_1.jpg" alt="">
-                                <p>图源：NBC</p>
+                                <img src="img/Jiangsu_Winning_CSL2020.jpg" alt="江苏队球员庆祝获得2020中超联赛冠军" width="750">
+                                <p style="color:grey; line-height: 30px">江苏队是2020年中国足球协会超级联赛（CSL
+                                    ，中超）冠军得主。<br /> 图源：体坛周报微信公众号
+                                </p>
                             </center>
                         </div>
                     </div>
 
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
-                            <p><b>“向国会进军”</b></p>
-                            <p>自11月美国大选点票结束以来，特朗普在输掉这次选举后便开始一系列企图继续保留其权力的挣扎。一方面，他玩弄起他的“狗哨”（通过暗示的手段来表达对政治主流观点的反对），比如，他经常说少数族裔的移民会把白人为主的郊区搞乱。<b>积极地调动起他的忠诚者们散布着各种粗制滥造的选举阴谋与作弊“证据”</b>。另一边，他<b>用狂热支持者选票（胡萝卜）和总统权力的大棒诱使共和党议员们支持他对于选举阴谋论的支持。不少共和党议员们还天真地以为对阴谋论的支持是榨干特朗普与其狂热支持者价值的机会，兴高采烈地放出对特朗普选举阴谋论暧昧模糊的支持。</b></p>
-                            <p>终于，在2021年1月6日，在美国国会与副总统彭斯仪式性地清点选举人团票的当天，特朗普与他的支持者们开启了一场滑稽的大型化装晚会与亡灵召唤。Reichstag（德国国会大厦，1933年发生过纳粹主导的国会纵火案）与火刑架火光中的褐衫和的白袍纷纷登场，奴隶主与十字军的旗帜飘扬起来，各种早已朽烂的鬼影在这天都粉墨登场并在特朗普的号召之下聚集在美国的国会下。终于，在彭斯如实宣布民主党候选人拜登胜选时，这位特朗普“虔诚忠实“的仆人马上成为了特朗普狂热支持者的首要目标。在“吊死彭斯（Hang Mike Pence）”的口号下，“爱国者们”在国会警察半推半就的“帮助”下冲入了国会。虽然这次混乱无序的冲击现在看来形同一场马戏团演出，但这确实是美国政治上史无前例的一场对其资产阶级共和制度的挑战；在此之前，很少有人会认为这个世界资本主义的核心上演了一幕香蕉共和国（中美洲几个以香蕉种植业为支柱的小国，以频繁的军事政变闻名）式的政治动荡。<b>要了解这一幕发生的缘由，我们需要用外科手术刀划开表层病变的肌理，去寻找资本主义在美国矛盾累积的内核。</b></p>
+                            <p><b><i>02</i></b></p>
+                            <p><b>麦迪讯快评</b></p>
+                            <p><b>当前中超金元足球的弊病，正在于俱乐部的沉浮掌握在赞助商企业手中。</b>
+                                球队无法主宰自己的财政，而是全面依附于冠名企业。江苏足球俱乐部在停摆前由苏宁置业集团有限
+                                公司 100% 控股，能否运转便完全被苏宁左右。企业代表的资本涌入足球界的目的并非助力
+                                俱乐部长远发展，而往往为以冠名和队衣广告为核心的企业曝光短期利益上。
+                                于是，我们每每看到企业为了追求短期成绩而高价高薪引入外援，
+                                却又放任他们合同到期无转会费离开球队；且又很少听闻哪位青训小将崭露头角踢出名堂。</p>
                         </div>
                     </div>
 
                     <div class="col-12">
                         <div class="single-post-thumb">
                             <center>
-                                <img src="img/1_2.jpg" alt="">
-                                <p>图源：Chicago Tribune</p>
+                                <img src="img/Jiangsu_FC_Operation_Stoppage_Notice.jpg" alt="江苏足球俱乐部停止运营公告" width="750">
+                                <p style="color: grey; line-height: 30px">关于江苏足球俱乐部所属各球队停止运营的公告。
+                                    <br />2021年2月28日。
+                                    图源：江苏足球俱乐部微信公众号
+                                </p>
                             </center>
                         </div>
                     </div>
 
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
-                            <p><b>序幕</b></p>
-                            <p>要回答特朗普如何在2021年掀起这样一场风暴，我们必须先看一下他2016年是如何获得其选民支持并胜利的。在这次的冲击国会事件中，绝大多数特朗普的狂热支持者相信“Wir sind das volk （我们就是人民）”并相信着他们在执行着一场由“爱国者们”发起的掀翻腐败政府的“革命”。<b>不少的幼稚者看到这场由许多美国底层民众参与的运动错误地以为这是一场属于美国人民的运动，甚至于更荒谬地认为这是一场无产阶级运动。</b>正如纳粹党的在德国的崛起也不乏有来自于大量受蛊惑的德国工人与无产阶级的支持一样，特朗普所煽动的这场破坏活动目的是为了维护他自己的权力与扩张其种族主义与新时代麦卡锡主义的影响。同时<b>美国的底层人民在冷战麦卡锡主义，去工业化，工会衰落，宗教保守主义与新自由主义资本主义经济的统治与荼毒下</b>，一方面累积了<b>对大资本家与大企业的大量不满</b>。而另一方面，<b>美国社会长期以来又把左翼思想与社会主义当作洪水猛兽</b>。同时，资本主义的全球剥削体系也使美国这样的资本主义核心国家中的无产阶级享受到了大企业主们在全球剥削剩余价值后的残羹剩饭，使得他们愈发丧失了斗争性。在这样的矛盾环境中，在工厂减少、工会衰落背景下的底层人民开始转向了教堂与保守主义，转向了种族主义乃至于法西斯主义的道路上。右翼煽动者们试图让人们把他们的困境归咎于外来者与外国人们。在这样的的催化下，<b>美国这位弗兰克斯坦（玛丽雪莱笔下的一个科学怪人，他创造了一个缝合怪物）终于制造出了这个有着传统主义脑袋、基督教保守主义躯干、法西斯主义双腿与种族主义臂膀的“怪人”，并最终选择了特朗普成为其大脑。</b></p>
+                            <p><b>这样只求即战力而忽略青训储备的“竭泽而渔”，让大多数球队无法自己“造血”而只能依赖企业资助的
+                                    转会买人来保持战力；只投钱而忽略球迷群体，则削弱了战绩的变现能力。</b>
+                                以2018年为例，中超俱乐部平均收入为 6.86 亿元，平均支出 11.26 亿人民币（约 1.7 亿美元），
+                                平均亏损 4.4 亿人民币（约 6600 万美元）。
+                                而这“烧钱大战”在疫情时代更是暴露了其最大的问题：
+                                <b>一旦投入远多于产出，或者投入难以为继，并非真正认同俱乐部文化的企业便有可能将俱乐部
+                                    看作弃子，球队的运营就会陷入动荡。</b>
+                                根据苏宁的财报，经过处理，2020 年公司属于上市公司股东的净利润为亏损 42.30 亿人民币（约 6.3 亿美元），
+                                同期亏损 44.82 亿人民币（约 6.7 亿美元）。江苏足球俱乐部当下以欠薪为代表的 5 ~ 6 亿人民币
+                                （约 7500 ~ 9000 万美元）的债务，不仅让球迷咋舌，也让球队的潜在接管方望而却步，大大增加了球队解散的风险。
+                            </p>
                         </div>
                     </div>
 
                     <div class="col-12">
                         <div class="single-post-thumb">
                             <center>
-                                <img src="img/1_3.jpg" alt="">
-                                <p>图源：KRNV</p>
+                                <img src="img/Jiangsu_Fans_Protest.jpg" alt="2020中超女足" width="750">
+                                <p style="color:grey; line-height: 30px">2020
+                                    球迷在江苏俱乐部门口拉横幅：“热血难凉 保卫江苏队！”<br /> 图源：微博。2021年3月3日</p>
                             </center>
                         </div>
                     </div>
 
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
-                            <p><b>选举前奏</b></p>
-                            <p>2020年初出现的新冠病毒并没有像特朗普自大地宣称到“会像奇迹般消失(One day — it’s like a miracle — it will disappear)”，相反地，美国的政治稳定性随着新冠病毒的肆虐与民众生活水平的普遍下降倒是毫不令人意外地消失了。</p>
-                            <p>在这样的环境下，长期建立在种族间不平等的经济地位之上的种族主义问题因为2020年的5月明尼苏达警察对于乔治·弗洛伊德的谋杀突出表现了出来，其引发的一系列诉求种族平等与反对法西斯主义的游行示威也达到了自民权运动以来对最高峰。<b>对于美国人民对种族平等与社会正义的诉求中，美国的资产阶级政府的两只铁钳对其进行了联合绞杀。</b>一方面是民主党与自由派对黑人运动表示口头支持，<b>但却对核心问题，即黑人和白人在经济地位上的不平等顾左右而言他</b>，另一方面则是<b>特朗普用“法律与秩序(law and orders)”集结国家暴力机器和民间的“反革命十字军”尝试用真枪实弹的暴力来“拯救”他们心心念念的属于“财产，家庭，宗教，秩序”的旧社会</b>。连最表面与浅薄的对于种族平等的诉求与对警察暴力的反对“都同时被当作‘谋害社会的行为’加以惩罚，当作‘社会主义阴谋’加以指责”。</p>
-                            <p>在这样的动荡与混乱中，年末的美国总统大选迎来了两位候选人，一位是老气横秋的政治建制派代表人拜登，而另一位就是本文的主角特朗普。毫无疑问地，特朗普先生在选举前就意识到他对新冠疫情的完全放任与突出的种族矛盾令他的连任之路变得愈发飘渺，于是<b>他的视线便开始转向了那属于古罗马“独裁官”亡灵的束棒与月桂枝，在选举投票前便一刻不停地质疑着选举的合法性，</b>“如果我输了，那一定是民主党作弊了”。</p>
-                        </div>
-                    </div>
+                            <p>在巨额亏损的大背景下，苏宁老板张近东提出“收缩战线”策略，
+                                让我们见到了世界足坛罕见的“卫冕冠军存亡成疑”景象。烧钱烧不下去，便选择退出，
+                                企业的选择多少也表明金元足球的不可持续，也到了应该被结束的时候。推倒重来固然残忍，
+                                但既然是要停止不可持续的模式，刮骨疗毒实非最差选择，只是苦了球迷，
+                                在漫长的阵痛期里等待球队归来。但倘若足球俱乐部真正实现自主运营，
+                                培养起独立的青训体系和文化圈，更纯粹更良性的中国足球生态产业便能够建立起来，
+                                而中国足球的振兴或许到那时才能落到实处。</p>
 
-                    <div class="col-12">
-                        <div class="single-post-thumb">
-                            <center>
-                                <img src="img/1_4.jpg" alt="">
-                            </center>
+                            <p style="color:grey"><i>消息来源：天眼查、新华网、体坛周报微信公众号等</i></p>
                         </div>
                     </div>
 
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
+                            <br />
+                            <br />
+                            <hr />
+                            <p><b style="font-size:30px">往期体育专栏 </b> 作者：冬薯夏瓜</p>
+                            <p><a href="FC_Neutral_Name.html" style="color:blue" target="_blank" title="在新标签页打开另一期体育专栏">
+                                    第二期：“改中性名”风波暂告结束，中国足俱改革长路漫漫</a></p>
+                            <p><a href="Chinese_Women_Football.html" style="color:blue" target="_blank" title="在新标签页打开另一期体育专栏">
+                                    第三期：触目惊心的数据：铿锵玫瑰值得关注，女足联赛更需发展</a></p>
                         </div>
                     </div>
+
 
                 </div>
             </div>
