Update of about page

--- a/about.html
+++ b/about.html
@@ -361,8 +361,7 @@
                                 <img src="img/members-img/skx.jpg" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">孙可欣</h4>
-                                    <div
-                                        class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
                                         <h5 class="font-pt mb-0">创始人、前任社长</h5>
                                     </div>
                                 </div>
@@ -373,8 +372,7 @@
                                 <img src="img/members-img/ylh.jpg" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">袁立豪</h4>
-                                    <div
-                                        class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
                                         <h5 class="font-pt mb-0">社长、编辑</h5>
                                     </div>
                                 </div>
@@ -385,8 +383,7 @@
                                 <img src="img/members-img/twz.jpg" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">滕文哲</h4>
-                                    <div
-                                        class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
                                         <h5 class="font-pt mb-0">编辑</h5>
                                     </div>
                                 </div>
@@ -397,8 +394,7 @@
                                 <img src="img/members-img/thl.jpg" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">陶翰林</h4>
-                                    <div
-                                        class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
                                         <h5 class="font-pt mb-0">编辑</h5>
                                     </div>
                                 </div>
@@ -409,8 +405,7 @@
                                 <img src="img/members-img/cmf.jpg" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">陈牧帆</h4>
-                                    <div
-                                        class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
                                         <h5 class="font-pt mb-0">美编、编辑</h5>
                                     </div>
                                 </div>
@@ -421,20 +416,7 @@
                                 <img src="img/members-img/gcx.jpg" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">郭晨晓 Atlas</h4>
-                                    <div
-                                        class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
-                                        <h5 class="font-pt mb-0">技术</h5>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-md-3">
-                            <div class="single-team-area">
-                                <img src="img/members-img/szw.jpg" alt="">
-                                <div class="team-member-data">
-                                    <h4 class="font-pt">宋知为</h4>
-                                    <div
-                                        class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
                                         <h5 class="font-pt mb-0">技术</h5>
                                     </div>
                                 </div>
@@ -445,8 +427,7 @@
                                 <img src="img/members-img/wxl.jpg" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">王旭黎</h4>
-                                    <div
-                                        class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
                                         <h5 class="font-pt mb-0">财务</h5>
                                     </div>
                                 </div>
@@ -457,21 +438,8 @@
                                 <img src="img/members-img/hry.jpg" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">何瑞阳</h4>
-                                    <div
-                                        class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
                                         <h5 class="font-pt mb-0">财务、编辑</h5>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-md-3">
-                            <div class="single-team-area">
-                                <img src="img/members-img/wyx.jpg" alt="">
-                                <div class="team-member-data">
-                                    <h4 class="font-pt">王衍翔</h4>
-                                    <div
-                                        class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
-                                        <h5 class="font-pt mb-0">编辑</h5>
                                     </div>
                                 </div>
                             </div>
@@ -481,8 +449,7 @@
                                 <img src="img/members-img/yxp.jpg" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">杨小霈</h4>
-                                    <div
-                                        class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
                                         <h5 class="font-pt mb-0">特约编辑</h5>
                                     </div>
                                 </div>
@@ -493,8 +460,7 @@
                                 <img src="img/members-img/cjx.jpg" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">陈建旭</h4>
-                                    <div
-                                        class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
                                         <h5 class="font-pt mb-0">编辑</h5>
                                     </div>
                                 </div>
@@ -505,8 +471,7 @@
                                 <img src="img/members-img/xty.jpg" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">肖天倚</h4>
-                                    <div
-                                        class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
                                         <h5 class="font-pt mb-0">美编、编辑</h5>
                                     </div>
                                 </div>
@@ -517,8 +482,7 @@
                                 <img src="img/members-img/gym.jpg" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">郭一民</h4>
-                                    <div
-                                        class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
                                         <h5 class="font-pt mb-0">特约编辑、美编</h5>
                                     </div>
                                 </div>
@@ -529,8 +493,7 @@
                                 <img src="img/members-img/ywx.jpg" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">杨雯熙</h4>
-                                    <div
-                                        class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
                                         <h5 class="font-pt mb-0">美编、技术</h5>
                                     </div>
                                 </div>
@@ -538,12 +501,22 @@
                         </div>
                         <div class="col-12 col-sm-6 col-md-3">
                             <div class="single-team-area">
-                                <img src="img/members-img/xy.jpeg" alt="">
+                                <img src="img/members-img/szw.jpg" alt="">
                                 <div class="team-member-data">
-                                    <h4 class="font-pt">奚悦Ivy</h4>
-                                    <div
-                                        class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
-                                        <h5 class="font-pt mb-0">美编</h5>
+                                    <h4 class="font-pt">宋知为</h4>
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                        <h5 class="font-pt mb-0">技术</h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-3">
+                            <div class="single-team-area">
+                                <img src="img/members-img/wrj.jpg" alt="">
+                                <div class="team-member-data">
+                                    <h4 class="font-pt">汪柔嘉</h4>
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                        <h5 class="font-pt mb-0">技术</h5>
                                     </div>
                                 </div>
                             </div>
@@ -553,8 +526,7 @@
                                 <img src="img/members-img/mxr.jpeg" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">马晓茹</h4>
-                                    <div
-                                        class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
                                         <h5 class="font-pt mb-0">美编</h5>
                                     </div>
                                 </div>
@@ -564,10 +536,42 @@
                             <div class="single-team-area">
                                 <img src="img/members-img/penny.jpeg" alt="">
                                 <div class="team-member-data">
-                                    <h4 class="font-pt">赵沛霖Penny</h4>
-                                    <div
-                                        class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <h4 class="font-pt">赵沛霖 Penny</h4>
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
                                         <h5 class="font-pt mb-0">编辑</h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-3">
+                            <div class="single-team-area">
+                                <img src="img/members-img/jrc.jpg" alt="">
+                                <div class="team-member-data">
+                                    <h4 class="font-pt">金若翀</h4>
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                        <h5 class="font-pt mb-0">编辑</h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-3">
+                            <div class="single-team-area">
+                                <img src="img/members-img/lrj.jpg" alt="">
+                                <div class="team-member-data">
+                                    <h4 class="font-pt">李若嘉</h4>
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                        <h5 class="font-pt mb-0">美编</h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-3">
+                            <div class="single-team-area">
+                                <img src="img/members-img/fkx.jpg" alt="">
+                                <div class="team-member-data">
+                                    <h4 class="font-pt">方轲翔</h4>
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                        <h5 class="font-pt mb-0">技术</h5>
                                     </div>
                                 </div>
                             </div>
@@ -577,8 +581,7 @@
                                 <img src="img/members-img/grx.jpeg" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">郭瑞萱</h4>
-                                    <div
-                                        class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
                                         <h5 class="font-pt mb-0">美编</h5>
                                     </div>
                                 </div>
